🖍 remove text decorations for now

--- a/docs/source/audio_load.mdx
+++ b/docs/source/audio_load.mdx
@@ -31,7 +31,7 @@ Index into an audio dataset using the row index first and then the `audio` colum
 
 </Tip>
 
-For a guide on how to load any type of dataset, take a look at the <a class="underline decoration-sky-400 decoration-2 font-semibold" href="./loading">general loading guide</a>.
+For a guide on how to load any type of dataset, take a look at the [general loading guide](./loading).
 
 ## Local files
 
