--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -11,7 +11,7 @@ This guide will show you how to load a dataset from:
 - Offline
 - A specific slice of a split
 
-For more details specific to loading other dataset modalities, take a look at the <a class="underline decoration-pink-400 decoration-2 font-semibold" href="./audio_load">load audio dataset guide</a>, the <a class="underline decoration-yellow-400 decoration-2 font-semibold" href="./image_load">load image dataset guide</a>, or the <a class="underline decoration-green-400 decoration-2 font-semibold" href="./nlp_load">load text dataset guide</a>.
+For more details specific to loading other dataset modalities, take a look at the [load audio dataset guide](./audio_load), the [load image dataset guide](./image_load), or the [load text dataset guide](./nlp_load).
 
 <a id='load-from-the-hub'></a>
 
