--- a/docs/source/repository_structure.mdx
+++ b/docs/source/repository_structure.mdx
@@ -94,7 +94,7 @@ In particular, these keywords are equivalent:
 
 - train, training
 - validation, valid, dev
-- test, testing, eval
+- test, testing, eval, evaluation
 
 Therefore this is also a valid repository:
 
