✨ add text decorators

--- a/docs/source/nlp_load.mdx
+++ b/docs/source/nlp_load.mdx
@@ -1,6 +1,6 @@
 # Load text data
 
-This guide shows you how to load text datasets. To learn how to load any type of dataset, take a look at the [general loading guide](./loading).
+This guide shows you how to load text datasets. To learn how to load any type of dataset, take a look at the <a class="underline decoration-sky-400 decoration-2 font-semibold" href="./loading">general loading guide</a>.
 
 Text files are one of the most common file types for storing a dataset. By default, 🤗 Datasets samples a text file line by line to build the dataset.
 
