--- a/docs/source/nlp_process.mdx
+++ b/docs/source/nlp_process.mdx
@@ -5,7 +5,7 @@ This guide shows specific methods for processing text datasets. Learn how to:
 - Tokenize a dataset with [`~Dataset.map`].
 - Align dataset labels with label ids for NLI datasets.
 
-For a guide on how to process any type of dataset, take a look at the [general process guide](./process).
+For a guide on how to process any type of dataset, take a look at the <a class="underline decoration-sky-400 decoration-2 font-semibold" href="./process">general process guide</a>.
 
 ## Map
 
