--- a/docs/source/process.mdx
+++ b/docs/source/process.mdx
@@ -11,7 +11,7 @@ This guide will show you how to:
 - Apply a custom formatting transform.
 - Save and export processed datasets.
 
-For more details specific to processing other dataset modalities, take a look at the take a look at the [process audio dataset guide](./audio_process), the [process image dataset guide](./image_process), or the [process text dataset guide](./nlp_process).
+For more details specific to processing other dataset modalities, take a look at the <a class="underline decoration-pink-400 decoration-2 font-semibold" href="./audio_process">process audio dataset guide</a>, the <a class="underline decoration-yellow-400 decoration-2 font-semibold" href="./image_process">process image dataset guide</a>, or the <a class="underline decoration-green-400 decoration-2 font-semibold" href="./nlp_process">process text dataset guide</a>.
 
 The examples in this guide use the MRPC dataset, but feel free to load any dataset of your choice and follow along!
 
