--- a/docs/source/audio_process.mdx
+++ b/docs/source/audio_process.mdx
@@ -5,7 +5,8 @@ This guide shows specific methods for processing audio datasets. Learn how to:
 - Resample the sampling rate.
 - Use [`~Dataset.map`] with audio datasets.
 
-For a guide on how to process any type of dataset, take a look at the [general process guide](./process).
+For a guide on how to process any type of dataset, take a look at the <a class="underline decoration-sky-400 decoration-2 font-semibold" href="./process">general process guide</a>.
+
 
 ## Cast
 
