--- a/docs/source/image_load.mdx
+++ b/docs/source/image_load.mdx
@@ -23,7 +23,7 @@ Index into an image dataset using the row index first and then the `image` colum
 
 </Tip>
 
-For a guide on how to load any type of dataset, take a look at the [general loading guide](./loading).
+For a guide on how to load any type of dataset, take a look at the <a class="underline decoration-sky-400 decoration-2 font-semibold" href="./loading">general loading guide</a>.
 
 ## Local files
 
