--- a/docs/source/image_load.mdx
+++ b/docs/source/image_load.mdx
@@ -87,12 +87,52 @@ folder/train/0001.png
 folder/train/0002.png
 folder/train/0003.png
 ```
+Your `metadata.jsonl` file must have a `"file_name"` column which links image files with their metadata:
+
+```jsonl
+{"file_name": "0001.png", "additional_feature": "This is a first value of a text feature you added to your images"}
+{"file_name": "0002.png", "additional_feature": "This is a second value of a text feature you added to your images"}
+{"file_name": "0003.png", "additional_feature": "This is a third value of a text feature you added to your images"}
+```
 
 Link the metadata in `metadata.jsonl` file to the images using the `file_path` parameter:
 
 ```py
 >>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", file_path="/path/to/folder/train/metadata.jsonl", split="train")
 ```
+
+If you want to both extract labels from directories names and use information from metadata files, set `drop_labels=False`.
+By default, if metadata files are present, inferring labels based on the directory name is skipped.
+
+If you have data structure like this:
+```
+folder/train/metadata.jsonl
+folder/train/dog/golden_retriever.png
+folder/train/dog/german_shepherd.png
+
+folder/train/cat/maine_coon.png
+folder/train/cat/bengal.png
+```
+and `metadata.jsonl` file looks like:
+
+```jsonl
+{"file_name": "dog/golden_retriever.png", "text": "This is a golden retriever"}
+{"file_name": "dog/german_shepherd.png", "text": "This is a german shepherd"}
+{"file_name": "cat/bengal.png", "text": "This is a bengal cat"}
+```
+
+You can use both features from metadata and labels from filenames:
+
+```py
+>>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", drop_labels=False, split="train")
+>>> dataset[0]
+{"image": <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=640x480 at 0x7F5182C7AD30>, "label": 0, 'text_from_metadata': "This is a golden retriever"}
+```
+
+Alternatively, you can add `"label"` field to your `metadata.jsonl`.
+
+
+If you have any metadata files in your data directory, like in example above, but want to ignore them and only add labels extracted from the directories names, set `drop_metadata=True` and `drop_labels=False`.
 
 ### Image captioning
 
@@ -111,6 +151,7 @@ Load the dataset with `ImageFolder`, and it will create a `text` column for the 
 >>> dataset[0]["text"]
 "This is a golden retriever playing with a ball"
 ```
+
 
 ### Object detection
 
