--- a/docs/source/image_load.mdx
+++ b/docs/source/image_load.mdx
@@ -65,8 +65,11 @@ Load your dataset by specifying `imagefolder` and the directory of your dataset 
 >>> from datasets import load_dataset
 
 >>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder")
->>> dataset["train"][0]["image"]
-<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E6D7160>]
+>>> dataset["train"][0]
+{"image": <PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E6D7160>, "label": 0}
+
+>>> dataset["train"][-1]
+{"image": <PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E8DAD30>, "label": 1}
 ```
 
 Load remote datasets from their URLs with the `data_files` parameter:
@@ -87,18 +90,12 @@ folder/train/0001.png
 folder/train/0002.png
 folder/train/0003.png
 ```
-Your `metadata.jsonl` file must have a `"file_name"` column which links image files with their metadata:
+Your `metadata.jsonl` file must have a `file_name` column which links image files with their metadata:
 
 ```jsonl
 {"file_name": "0001.png", "additional_feature": "This is a first value of a text feature you added to your images"}
 {"file_name": "0002.png", "additional_feature": "This is a second value of a text feature you added to your images"}
 {"file_name": "0003.png", "additional_feature": "This is a third value of a text feature you added to your images"}
-```
-
-Link the metadata in `metadata.jsonl` file to the images using the `file_path` parameter:
-
-```py
->>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", file_path="/path/to/folder/train/metadata.jsonl", split="train")
 ```
 
 If you want to both extract labels from directories names and use information from metadata files, set `drop_labels=False`.
@@ -113,7 +110,7 @@ folder/train/dog/german_shepherd.png
 folder/train/cat/maine_coon.png
 folder/train/cat/bengal.png
 ```
-and `metadata.jsonl` file looks like:
+and your `metadata.jsonl` file looks like this:
 
 ```jsonl
 {"file_name": "dog/golden_retriever.png", "text": "This is a golden retriever"}
@@ -121,12 +118,12 @@ and `metadata.jsonl` file looks like:
 {"file_name": "cat/bengal.png", "text": "This is a bengal cat"}
 ```
 
-You can use both features from metadata and labels from filenames:
+you can use both features from metadata and labels from filenames:
 
 ```py
 >>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", drop_labels=False, split="train")
 >>> dataset[0]
-{"image": <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=640x480 at 0x7F5182C7AD30>, "label": 0, 'text': "This is a golden retriever"}
+{"image": <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=640x480 at 0x7F5182C7AD30>, "label": 0, "text": "This is a golden retriever"}
 ```
 
 Alternatively, you can add `"label"` field to your `metadata.jsonl`.
