Document new logging functions

--- a/docs/source/package_reference/logging_methods.mdx
+++ b/docs/source/package_reference/logging_methods.mdx
@@ -50,6 +50,14 @@ By default, `tqdm` progress bars will be displayed during dataset download and p
 
 [[autodoc]] datasets.logging.get_logger
 
+[[autodoc]] datasets.logging.enable_default_handler
+
+[[autodoc]] datasets.logging.disable_default_handler
+
+[[autodoc]] datasets.logging.enable_explicit_format
+
+[[autodoc]] datasets.logging.reset_format
+
 [[autodoc]] datasets.logging.enable_progress_bar
 
 [[autodoc]] datasets.logging.disable_progress_bar
