--- a/docs/source/image_load.mdx
+++ b/docs/source/image_load.mdx
@@ -65,8 +65,11 @@ Load your dataset by specifying `imagefolder` and the directory of your dataset 
 >>> from datasets import load_dataset
 
 >>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder")
->>> dataset["train"][0]["image"]
-<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E6D7160>]
+>>> dataset["train"][0]
+{"image": <PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E6D7160>, "label": 0}
+
+>>> dataset["train"][-1]
+{"image": <PIL.PngImagePlugin.PngImageFile image mode=RGBA size=1200x215 at 0x15E8DAD30>, "label": 1}
 ```
 
 Load remote datasets from their URLs with the `data_files` parameter:
@@ -87,12 +90,19 @@ folder/train/0001.png
 folder/train/0002.png
 folder/train/0003.png
 ```
+Your `metadata.jsonl` file must have a `file_name` column which links image files with their metadata:
 
-Link the metadata in `metadata.jsonl` file to the images using the `file_path` parameter:
-
-```py
->>> dataset = load_dataset("imagefolder", data_dir="/path/to/folder", file_path="/path/to/folder/train/metadata.jsonl", split="train")
+```jsonl
+{"file_name": "0001.png", "additional_feature": "This is a first value of a text feature you added to your images"}
+{"file_name": "0002.png", "additional_feature": "This is a second value of a text feature you added to your images"}
+{"file_name": "0003.png", "additional_feature": "This is a third value of a text feature you added to your images"}
 ```
+
+<Tip>
+
+If metadata files are present, the inferred labels based on the directory name are dropped by default. To include those labels, set `drop_labels=False` in `load_dataset`.
+
+</Tip>
 
 ### Image captioning
 
@@ -111,6 +121,7 @@ Load the dataset with `ImageFolder`, and it will create a `text` column for the 
 >>> dataset[0]["text"]
 "This is a golden retriever playing with a ball"
 ```
+
 
 ### Object detection
 
