--- a/docs/source/image_classification.mdx
+++ b/docs/source/image_classification.mdx
@@ -8,7 +8,7 @@ Before you start, make sure you have up-to-date versions of `albumentations` and
 pip install -U albumentations opencv-python
 ```
 
-This guide uses the [Beans](https://huggingface.co/datasets/beans) dataset for identifying the type of disease of a bean plant based on an image of its leaf.
+This guide uses the [Beans](https://huggingface.co/datasets/beans) dataset for identifying the type of bean plant disease based on an image of its leaf.
 
 Load the dataset and take a look at an example:
 
