--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -39,7 +39,13 @@ Both parameter values default to 1000, which can be expensive if you are storing
 
 ## Apply transforms
 
-🤗 Datasets can apply data augmentations from any library or package to your dataset. Transforms can be applied on-the-fly on batches of data with [`~Dataset.set_transform`], and consumes less disk space.
+🤗 Datasets applies data augmentations from any library or package to your dataset. Transforms can be applied on-the-fly on batches of data with [`~Dataset.set_transform`], which consumes less disk space.
+
+<Tip>
+
+The following example uses [torchvision](https://pytorch.org/vision/stable/index.html), but feel free to use other data augmentation libraries like [Albumentations](https://albumentations.ai/docs/), [Kornia](https://kornia.readthedocs.io/en/latest/), and [imgaug](https://imgaug.readthedocs.io/en/latest/).
+
+</Tip>
 
 For example, if you'd like to change the color properties of an image randomly:
 
@@ -65,5 +71,5 @@ Create a function to apply the `ColorJitter` transform:
 Apply the transform with the [`~Dataset.set_transform`] function:
 
 ```py
-dataset.set_transform(transforms)
+>>> dataset.set_transform(transforms)
 ```
