🖍 update toc in page

--- a/docs/source/dataset_script.mdx
+++ b/docs/source/dataset_script.mdx
@@ -22,7 +22,7 @@ The following guide includes instructions for dataset scripts for how to:
 - Add dataset metadata.
 - Download data files.
 - Generate samples.
-- Test if your dataset was generated correctly.
+- Generate dataset metadata.
 - Create a Dataset card.
 - Upload a dataset to the Hugging Face Hub or GitHub.
 
