--- a/docs/source/dataset_script.mdx
+++ b/docs/source/dataset_script.mdx
@@ -23,8 +23,7 @@ The following guide includes instructions for dataset scripts for how to:
 - Download data files.
 - Generate samples.
 - Generate dataset metadata.
-- Create a Dataset card.
-- Upload a dataset to the Hugging Face Hub or GitHub.
+- Upload a dataset to the Hub.
 
 Open the [SQuAD dataset loading script](https://huggingface.co/datasets/squad/blob/main/squad.py) template to follow along on how to share a dataset.
 
