--- a/docs/source/audio_load.mdx
+++ b/docs/source/audio_load.mdx
@@ -55,3 +55,125 @@ If you only want to load the underlying path to the audio dataset without decodi
  'transcription': 'I would like to set up a joint account with my partner'}
 ```
 
+## AudioFolder
+
+You can also load a dataset with a `AudioFolder` dataset builder. It does not require writing a custom dataloader, making it useful for quickly loading audio data. Your dataset structure might look like this:
+
+```
+folder/train/first_audio_file.wav
+folder/train/second_audio_file.wav
+folder/train/third_audio_file.wav
+
+folder/train/last_audio_file.wav
+```
+
+Load your audio dataset by specifying `audiofolder` and the directory of your dataset in `data_dir`:
+
+```py
+>>> from datasets import load_dataset
+
+>>> dataset = load_dataset("audiofolder", data_dir="/path/to/folder")
+>>> dataset["train"][0]
+{'audio':
+    {'path': '/path/to/extracted/audio/first_audio_file.wav',
+    'array': array([ 0.00088501,  0.0012207 ,  0.00131226, ..., -0.00045776, -0.00054932, -0.00054932], dtype=float32),
+    'sampling_rate': 16000}
+}
+```
+
+Load remote datasets from their URLs with the `data_files` parameter:
+
+```py
+>>> dataset = load_dataset("adiofolder", data_files="https://s3.amazonaws.com/datasets.huggingface.co/SpeechCommands/v0.01/v0.01_test.tar.gz")
+```
+
+## AudioFolder with metadata
+
+Metadata associated with your dataset can also be loaded. Make sure your dataset has a `metadata.jsonl` file:
+
+```
+folder/train/metadata.jsonl
+folder/train/first_audio_file.mp3
+folder/train/second_audio_file.mp3
+folder/train/third_audio_file.mp3
+```
+
+Your `metadata.jsonl` file must have a `file_name` column which links audio files with their metadata:
+
+```jsonl
+{"file_name": "first_audio_file.mp3", "additional_feature": "This is a first value of a text feature you linked with your audio files"}
+{"file_name": "second_audio_file.mp3", "additional_feature": "This is a second value of a text feature you linked with your audio files"}
+{"file_name": "third_audio_file.mp3", "additional_feature": "This is a third value of a text feature you linked with your audio files"}
+```
+
+### Automatic Speech Recognition
+
+ASR datasets contain text transcriptions of recorded audio files. An example `metadata.jsonl` might look like:
+
+```
+{"file_name": "11295_11059_000000.flac", "transcription": "znowu się duch z ciałem zrośnie w młodocianej wstaniesz wiosnie i możesz skutkiem tych leków umierać wstawać wiek wieków dalej tam były przestrogi jak siekać głowę jak nogi"}
+{"file_name": "11295_11059_000001.flac", "transcription": "już u źwierzyńca podwojów król zasiada przy nim książęta i panowie rada a gdzie wzniosły krążył ganek rycerze obok kochanek król skinął palcem zaczęto igrzysko"}
+{"file_name": "11295_11059_000002.flac", "transcription": "pewnie kędyś w obłędzie ubite minęły szlaki zaczekajmy dzień jaki poślemy szukać wszędzie dziś jutro pewnie będzie posłali wszędzie sługi czekali dzień i drugi gdy nic nie doczekali z płaczem chcą jechać dali"}
+{"file_name": "11295_11059_000003.flac", "transcription": "na miejscach które dziś piaskiem zaniosło gdzie car i trzcina zarasta po których teraz wasze biega wiosło stał okrąg pięknego miasta"}
+```
+
+Load the dataset with `AudioFolder`, and it will create a `transcription` column with text transcriptions:
+
+```py
+>>> dataset = load_dataset("audiofolder", data_dir="/path/to/folder", split="train")
+>>> dataset[0]["transcription"]
+"znowu się duch z ciałem zrośnie w młodocianej wstaniesz wiosnie i możesz skutkiem tych leków umierać wstawać wiek wieków dalej tam były przestrogi jak siekać głowę jak nogi"
+```
+
+## AudioFolder with labels
+
+If you have an audio classification task, set `drop_labels=False` to infer labels from directories names as defined in [`~datasets.packaged_modules.audiofolder.AudioFolderConfig`].
+Your data should be organized like:
+
+```
+folder/train/label_0/first_audio_label_0.mp3
+folder/train/label_0/second_audio_label_0.mp3
+folder/train/label_1/first_audio_label_1.mp3
+
+folder/train/label_9/last_audio_label`_99.mp3
+```
+
+`AudioFolder` creates a `label` column of a [`~datasets.features.ClassLabel`] type based on the directory name.
+
+### Language identification
+
+Language identification is one of audio classification tasks for which you might use labels.
+
+```
+folder/train/ar/0197_720_0207_190.wav
+folder/train/ar/0179_830_0185_540.mp3
+folder/train/ar/0179_830_0185_540.mp3
+
+folder/train/zh/0442_690_0454_380.mp3
+```
+
+Load the dataset with `AudioFolder` with `drop_labels=False`, and it will create a `label` column with the language id:
+
+```
+>>> dataset = load_dataset("audiofolder", data_dir="/path/to/folder", drop_labels=False)
+>>> dataset["train"][0]
+{'audio':
+    {'path': '/path/to/extracted/audio/0197_720_0207_190.mp3',
+    'array': array([-3.6621094e-04, -6.1035156e-05,  6.1035156e-05, ..., -5.1879883e-04, -1.0070801e-03, -7.6293945e-04],
+    'sampling_rate': 16000}
+ 'label': 0  # "ar"
+}
+>>> dataset["train"][-1]
+{'audio':
+    {'path': '/path/to/extracted/audio/0442_690_0454_380.mp3',
+    'array': array([1.8920898e-03, 9.4604492e-04, 1.9226074e-03, ..., 9.1552734e-05, 1.8310547e-04, 6.1035156e-05],
+    'sampling_rate': 16000}
+ 'label': 99  # "zh"
+}
+```
+
+<Tip>
+
+Alternatively, you can add `label` column to your `metadata.jsonl` file.
+
+</Tip>
