fix typo (from code review)

--- a/docs/source/audio_load.mdx
+++ b/docs/source/audio_load.mdx
@@ -57,7 +57,7 @@ If you only want to load the underlying path to the audio dataset without decodi
 
 ## AudioFolder
 
-You can also load a dataset with a `AudioFolder` dataset builder. It does not require writing a custom dataloader, making it useful for quickly loading audio data. Your dataset structure might look like:
+You can also load a dataset with an `AudioFolder` dataset builder. It does not require writing a custom dataloader, making it useful for quickly loading audio data. Your dataset structure might look like:
 
 ```
 folder/train/first_audio_file.wav
